Arreglo de errores. Falta logout

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -49,7 +49,8 @@
                     </div>
                     <div id="card-transferir-dinero">
                         <input type="number" placeholder="$" step="0.01">
-                        <input type="text" pattern="\d*" minlength = "22 "maxlength="22" placeholder="CVU o CBU dest">
+                        <input type="text" pattern="\d*" minlength = "22 "maxlength="22" placeholder="CVU o CBU destino">
+                        <p>22 digitos</p>
                         <button class="btn-style">Transferir dinero</button>
                     </div>
                 </div>
